...
            OUTDOOR_ACTIVITY -> "Outdoor Activity"
            FOOD_TASTING -> "Food Tasting"
            TECH_MEETUP -> "Tech Meetup"
            WELLNESS_EVENT -> "Wellness Event"
            CREATIVE_WORKSHOP -> "Creative Workshop"
            OTHER -> "Other"
            CUSTOM -> "Custom"
        }

    val suggestionCategory: SuggestionCategory
        get() = when (this) {
            BIRTHDAY -> SuggestionCategory.SOCIAL
            WEDDING -> SuggestionCategory.SOCIAL
...
